# Aw-man

./: .env.example  .gitignore  DASHBOARD_NOTES.md  Dockerfile  LICENSE  PR_BODY.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
configs/: logging.yaml
dashboard/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  vite-env.d.ts
dashboard/src/api/: client.ts
dashboard/src/components/: AlertCard.tsx  ChatInterface.tsx  MetricCard.tsx  Sidebar.tsx
dashboard/src/context/: AlertContext.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/pages/: Alerts.tsx  AttackGraphPage.tsx  Copilot.tsx  Overview.tsx  Timeline.tsx
dashboard/src/styles/: index.css
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/models/anomaly/: __init__.py  vae_detector.py
src/models/sequence/: __init__.py  behavior_predictor.py
src/pipeline/: __init__.py  feature_extractor.py
src/redteam/: __init__.py  attacker_agent.py
src/xai/: __init__.py  explainer.py
