[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-ai"
version = "0.1.0b1"
description = "Autonomous AI Cyber Defense Platform - Detect unknown attacks, predict attacker behavior, explain threats"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "xorinf", email = "xorinf@users.noreply.github.com"}
]
keywords = ["cybersecurity", "ai", "ml", "anomaly-detection", "xai", "threat-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
full = [
    "pytorch-lightning>=2.0.0",
    "torch-geometric>=2.3.0",
    "shap>=0.42.0",
    "captum>=0.6.0",
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "kafka-python>=2.0.0",
    "redis>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/xorinf/Aw-man"
Repository = "https://github.com/xorinf/Aw-man"
Issues = "https://github.com/xorinf/Aw-man/issues"

[project.scripts]
sentinel = "src.api.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
